# ProofSIFT

./: .cursorrules  .gitignore  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  setup_sift.sh  vercel.json  vite.config.ts
agent/: __init__.py  critic.py  engine.py  investigator.py
benchmark/: __init__.py  evaluator.py
cases/demo_case/: case.json  ground_truth.json
db/: __init__.py  manager.py  schema.py
docs/: accuracy_report.md  architecture.md  dataset_documentation.md  demo_video_script.md  final_pre_submission_validation.md  judge_instructions.md  project_description.md  research.md  sift_integration.md  submission_checklist.md  vercel_deployment.md
mcp_server/: __init__.py  server.py
mcp_server/tools/: __init__.py  disk_parsers.py  log_parsers.py  memory_parsers.py
src/: main.tsx
src/components/: ArchitectureDiagramPanel.tsx
src/frontend/: ProofSIFTArchitectureFlow.jsx  jsx-modules.d.ts  main.jsx  styles.css
src/lib/: proofsift-data.ts
src/proofsift/: __init__.py  advanced_collectors.py  agent.py  anti_forensics.py  audit.py  bayesian.py  benchmark.py  cli.py  clock_drift.py  constraint_engine.py  counterfactual.py  crypto_auth.py  graph.py  integrity.py  knowledge_graph.py  mcp_server.py  mft_entropy.py  mitre_sequence.py  models.py  provenance.py  remediation.py  reporting.py  (+4 more)
submission_docs/: accuracy_report.md  architecture_labels.txt  execution_log.jsonl  project_description.md  report_3.md
tests/: test_advanced_verification.py  test_demo_case.py  test_security.py
(+18 files in other folders)
