[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "proofsift"
version = "0.1.0"
description = "Evidence-proven, self-correcting autonomous DFIR agent for SANS SIFT and Protocol SIFT."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "ProofSIFT Contributors" }
]
keywords = ["dfir", "incident-response", "sift", "mcp", "forensics", "ai-agent"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security"
]

[project.scripts]
proofsift = "proofsift.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

